# media-moment-iz-second

./: canny_algorithm.py  canny_roberts.py  canny_scharr.py  canny_sobel.py  graph.py  graph_algorithm.py  graph_algorytm.py  justfile  kani_algorytm.py  kani_roberts.py  kani_sharr.py  kani_sobel.py  matrix_operators.py  pyproject.toml
report/: REPORT.md  pres.odp
