[tool.poetry]
name = "media_iz_2"
version = "1.0.0"
description = ""
authors = ["mister.alex49@yandex.ru"]
package-mode= false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
